<resources>
    <string name="app_name">3310_proj_final</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="account_ready">Already have an account?</string>
    <string name="login_now">Login Now</string>
    <string name="account_not_ready">Don\'t have an account?</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="main_activity">Exercise List</string>
    <string name="floating_button_description">Logout</string>
    <string name="start_workout">Start a Workout</string>
    <string name="workout_option">Choose a workout type</string>
    <string name="choose_exercise">Choose your preferred exercise.</string>
    <string name="select_exercises">Select Exercises</string>

    <string-array name="gym_movement_list">
        <item>Flat Chest Press</item>
        <item>Incline Chest Press</item>
        <item>Chest Flies</item>
        <item>Dips</item>
        <item>Lateral Raises</item>
        <item>Bent Over Rows</item>
        <item>Lat Pulldowns</item>
        <item>Deadlifts</item>
        <item>Back Squats</item>
        <item>Leg Extension</item>
        <item>Dummy</item>
    </string-array>

    <string-array name="muscles_targeted">
        <item>Chest</item>
        <item>Chest</item>
        <item>Chest</item>
        <item>Triceps / Chest</item>
        <item>Shoulder</item>
        <item>Back</item>
        <item>Back</item>
        <item>Back</item>
        <item>Leg</item>
        <item>Leg</item>
        <item>Dummy</item>
    </string-array>

    <string-array name="exercise_type">
        <item>C</item>
        <item>C</item>
        <item>I</item>
        <item>I</item>
        <item>I</item>
        <item>C</item>
        <item>I</item>
        <item>C</item>
        <item>C</item>
        <item>I</item>
        <item>D</item>
    </string-array>

    <string-array name="movement_description">
        <item>Lie on your back on a flat bench. Grip a barbell with hands slightly wider than shoulder width. The bar should be directly over the shoulders. Press your feet firmly into the ground and keep your hips on the bench throughout the entire movement.</item>
        <item>When the bench is set at an incline (15 to 30 degrees), you activate your shoulders more since it\'s comparable to a shoulder press. Also, because of the angle of the bench, this exercise puts less stress on your rotator cuff, which is a common area for injury when using the flat bench.</item>
        <item>A chest fly is a weightlifting exercise that primarily targets the pectoral muscles. It is a variation of the standard bench press and is performed by lying on a flat bench with a weight in each hand. You can do this exercise with dumbbells, barbells, or cables.</item>
        <item>Dips are a bodyweight exercise that develops the triceps and other upper-body muscles. The exercise begins when you hold on to parallel bars with your arms straight. You then bend your elbows until your upper arms are parallel to the ground before driving up to the starting position.</item>
        <item>Raising your arms to the side in a plane-like position is also called a shoulder abduction. Lateral raises muscles worked primarily include the lateral deltoid muscles. Because of the rotating movement, you\'ll use your front deltoids and upper traps a little bit, too.</item>
        <item>Lift the bar from the rack, bend forward at the hips, and keep the back straight with a slight bend in the knees. Lower the bar towards the floor until the elbows are completely straight, and keep the back flat as the bar is pulled towards the belly button. Then slowly lower the bar to the starting position and repeat.</item>
        <item>The pulldown exercise works the back muscles and is performed at a workstation with adjustable resistance, usually plates. While seated, you pull a hanging bar toward you to reach chin level, then release it back up with control for one repetition. This exercise can be done as part of an upper-body strength workout.</item>
        <item>The deadlift is a movement in which your hips hinge backward to lower down and pick up a weighted barbell or kettlebell from the floor. Your back is flat throughout the movement. Some benefits of performing deadlifts include strengthening and gaining more definition in your upper and lower back, glutes, and hamstrings.</item>
        <item>The back squat exercise is most often prescribed with an individual starting in a standing position with the feet flat on the floor, the knees and hips in a neutral, extended anatomical position, and the spine in an upright position with preservation of its natural curves.</item>
        <item>The back squat exercise is most often prescribed with an individual starting in a standing position with the feet flat on the floor, the knees and hips in a neutral, extended anatomical position, and the spine in an upright position with preservation of its natural curves.</item>
        <item>Leg extensions are exercises usually done with a lever machine. You sit on a padded seat and raise a padded bar with your legs. The exercise works mainly the quadriceps muscles of the front of the thigh—the rectus femoris and the vastus muscles.</item>
    </string-array>
</resources>